finished updating all questions

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Brett. I am a sports enthusiast pursuing a career in software development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in England but lived and went to high school in California before attending college at Purdue in Indiana.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>When I get some free time I am usually snowboarding, playing baseball, or hanging out with my friends.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I have a couple dreams. Ideally I would love to do something in sports and I have a dream of owning and operating my own full time fantasy football website.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in downtown Denver right by Coors Field.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love the creativity and thought that goes into coding and I love to problem solve.</p>
     </section>
 
     <footer id="footer">
